--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Michael Wood",
   "license": "SEE LICENSE IN license.md",
   "dependencies": {
+    "axios": "^1.6.7",
     "dotenv": "^16.3.1",
-    "openai": "^4.22.0"
+    "openai": "^4.22.0",
+    "papaparse": "^5.4.1"
   }
 }
