--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "SEE LICENSE IN license.md",
   "dependencies": {
     "axios": "^1.6.7",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
+    "mysql2": "^3.9.2",
     "openai": "^4.22.0",
     "papaparse": "^5.4.1"
   }
