--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
+    "gpt-3-encoder": "^1.1.4",
     "mysql2": "^3.9.2",
-    "openai": "^4.22.0",
-    "papaparse": "^5.4.1"
+    "openai": "^3.3.0",
+    "papaparse": "^5.4.1",
+    "wink-eng-lite-web-model": "^1.5.2",
+    "wink-nlp": "^1.14.3"
   }
 }
